programacion de DHT11 y DS3231

--- a/GccApplication3/Debug/Makefile
+++ b/GccApplication3/Debug/Makefile
@@ -40,6 +40,8 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../Include/Src/DHT11.c \
+../Include/Src/DS3231.c \
 ../Include/Src/serialPort.c \
 ../Include/Src/timer.c \
 ../main.c
@@ -52,21 +54,29 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+Include/Src/DHT11.o \
+Include/Src/DS3231.o \
 Include/Src/serialPort.o \
 Include/Src/timer.o \
 main.o
 
 OBJS_AS_ARGS +=  \
+Include/Src/DHT11.o \
+Include/Src/DS3231.o \
 Include/Src/serialPort.o \
 Include/Src/timer.o \
 main.o
 
 C_DEPS +=  \
+Include/Src/DHT11.d \
+Include/Src/DS3231.d \
 Include/Src/serialPort.d \
 Include/Src/timer.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
+Include/Src/DHT11.d \
+Include/Src/DS3231.d \
 Include/Src/serialPort.d \
 Include/Src/timer.d \
 main.d
@@ -85,6 +95,20 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+Include/Src/DHT11.o: ../Include/Src/DHT11.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include" -I"../Include" -I"../Include/Header" -I"../Include/Src"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Include/Src/DS3231.o: ../Include/Src/DS3231.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include" -I"../Include" -I"../Include/Header" -I"../Include/Src"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 Include/Src/serialPort.o: ../Include/Src/serialPort.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
