temphumReg y completacion del main mas detalles de depuracion

--- a/GccApplication3/Debug/Makefile
+++ b/GccApplication3/Debug/Makefile
@@ -43,6 +43,7 @@ C_SRCS +=  \
 ../Include/Src/DHT11.c \
 ../Include/Src/DS3231.c \
 ../Include/Src/serialPort.c \
+../Include/Src/tempHumReg.c \
 ../Include/Src/timer.c \
 ../main.c
 
@@ -57,6 +58,7 @@ OBJS +=  \
 Include/Src/DHT11.o \
 Include/Src/DS3231.o \
 Include/Src/serialPort.o \
+Include/Src/tempHumReg.o \
 Include/Src/timer.o \
 main.o
 
@@ -64,6 +66,7 @@ OBJS_AS_ARGS +=  \
 Include/Src/DHT11.o \
 Include/Src/DS3231.o \
 Include/Src/serialPort.o \
+Include/Src/tempHumReg.o \
 Include/Src/timer.o \
 main.o
 
@@ -71,6 +74,7 @@ C_DEPS +=  \
 Include/Src/DHT11.d \
 Include/Src/DS3231.d \
 Include/Src/serialPort.d \
+Include/Src/tempHumReg.d \
 Include/Src/timer.d \
 main.d
 
@@ -78,6 +82,7 @@ C_DEPS_AS_ARGS +=  \
 Include/Src/DHT11.d \
 Include/Src/DS3231.d \
 Include/Src/serialPort.d \
+Include/Src/tempHumReg.d \
 Include/Src/timer.d \
 main.d
 
@@ -110,6 +115,13 @@ Include/Src/DS3231.o: ../Include/Src/DS3231.c
 	
 
 Include/Src/serialPort.o: ../Include/Src/serialPort.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include" -I"../Include" -I"../Include/Header" -I"../Include/Src"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Include/Src/tempHumReg.o: ../Include/Src/tempHumReg.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include" -I"../Include" -I"../Include/Header" -I"../Include/Src"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
